force-app/main/default/objects/Client_Request_Logs__c/Client_Request_Logs__c.object-meta.xml
<CustomObject>
    <description>Client Request Logs for Verifications, exclusions and registers</description>
    <label>Client Request Log</label>
    <nameField>
        <label>Client Request Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>