force-app/main/default/objects/Client_Request_Logs__c/fields/Added_At__c.field-meta.xml
<CustomField>
    <fullName>Added_At__c</fullName>
    <label>Added At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>