force-app/main/default/objects/Client_Request_Logs__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>