force-app/main/default/objects/Client_Request_Logs__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>search</fullName>
            </value>
            <value>
                <fullName>limitReached</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>