force-app/main/default/objects/Client_Request_Logs__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>Request Input</description>
    <label>Input</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>