force-app/main/default/objects/Client_Request_Logs__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the event was processed.</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>