force-app/main/default/objects/Client_Request_Logs__c/listViews/Show_all_fields.listView-meta.xml
<ListView>
    <fullName>Show_all_fields</fullName>
    <columns>NAME</columns>
    <columns>Client_Id__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Processed__c</columns>
    <columns>Added_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client_Id__c</field>
        <operation>equals</operation>
        <value>0194f2669bfc73399e20797b994d6e80</value>
    </filters>
    <label>Show all fields</label>
</ListView>